--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,9 @@ modGroup = com.myname.mymodid
 # This field can be left empty if you want your mod's version to be determined by the latest git tag instead.
 modVersion = 1.0.0
 
+# Whether to use the old jar naming structure (modid-mcversion-version) instead of the new version (modid-version)
+includeMCVersionJar = false
+
 # The name of your jar when you produce builds, not including any versioning info
 modArchivesBaseName = mymodid
 
