--- a/build.gradle
+++ b/build.gradle
@@ -683,24 +683,28 @@ idea {
                 '1. Setup Workspace'(Gradle) {
                     taskNames = ['setupDecompWorkspace']
                 }
-                '2. Build Jars'(Gradle) {
-                    taskNames = ['build']
-                }
-                '3. Run Client'(Gradle) {
+                '2. Run Client'(Gradle) {
                     taskNames = ['runClient']
                 }
-                '4. Run Server'(Gradle) {
+                '3. Run Server'(Gradle) {
                     taskNames = ['runServer']
                 }
-                '5. Run Obfuscated Client'(Gradle) {
+                '4. Run Obfuscated Client'(Gradle) {
                     taskNames = ['runObfClient']
                 }
-                '6. Run Obfuscated Server'(Gradle) {
+                '5. Run Obfuscated Server'(Gradle) {
                     taskNames = ['runObfServer']
                 }
                 if (enableSpotless.toBoolean()) {
-                    "7. Apply Spotless"(Gradle) {
+                    '6. Apply Spotless'(Gradle) {
                         taskNames = ["spotlessApply"]
+                    }
+                    '7. Build Jars' (Gradle) {
+                        taskNames = ['build']
+                    }
+                } else {
+                    '6. Build Jars'(Gradle) {
+                        taskNames = ['build']
                     }
                 }
                 'Update Buildscript'(Gradle) {
