move to beta.cursemaven.com

--- a/build.gradle
+++ b/build.gradle
@@ -338,7 +338,7 @@ repositories {
                 //noinspection ForeignDelegate
                 maven {
                     name = 'Curse Maven'
-                    url = 'https://www.cursemaven.com'
+                    url = 'https://beta.cursemaven.com'
                 }
             }
             filter {
