--- a/build.gradle
+++ b/build.gradle
@@ -401,10 +401,13 @@ configurations {
 dependencies {
     if (usesMixins.toBoolean() || forceEnableMixins.toBoolean()) {
         implementation 'zone.rong:mixinbooter:7.0'
-        api('org.spongepowered:mixin:0.8.3') {
+        String mixin = modUtils.enableMixins('org.spongepowered:mixin:0.8.3', "mixins.${modId}.refmap.json")
+
+        api (mixin) {
             transitive = false
         }
-        annotationProcessor('org.spongepowered:mixin:0.8.3') {
+
+        annotationProcessor(mixin) {
             transitive = false
         }
 
