fix CI job typo

--- a/.github/workflows/buildscript-maintenance.yml
+++ b/.github/workflows/buildscript-maintenance.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           token: ${{ secrets.BUILDSCRIPT_MAINTENANCE_TOKEN }}
           committer: GitHub <noreply@github.com>
-          author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com
+          author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
           add-paths: build.gradle
           commit-message: '[ci skip] update build script version to ${{ steps.update-buildscript.outputs.new_version }}'
           branch: gha-buildscript-maintenance
