--- a/build.gradle
+++ b/build.gradle
@@ -401,8 +401,8 @@ configurations {
 
 dependencies {
     if (usesMixins.toBoolean() || forceEnableMixins.toBoolean()) {
-        implementation 'zone.rong:mixinbooter:7.0'
-        String mixin = 'org.spongepowered:mixin:0.8.3'
+        implementation 'zone.rong:mixinbooter:8.3'
+        String mixin = 'zone.rong:mixinbooter:8.3'
         if (usesMixins.toBoolean()) {
             mixin = modUtils.enableMixins(mixin, "mixins.${modId}.refmap.json")
         }
