only use `enableMixins()` if usesMixins is true

--- a/build.gradle
+++ b/build.gradle
@@ -402,7 +402,10 @@ configurations {
 dependencies {
     if (usesMixins.toBoolean() || forceEnableMixins.toBoolean()) {
         implementation 'zone.rong:mixinbooter:7.0'
-        String mixin = modUtils.enableMixins('org.spongepowered:mixin:0.8.3', "mixins.${modId}.refmap.json")
+        String mixin = 'org.spongepowered:mixin:0.8.3'
+        if (usesMixins.toBoolean()) {
+            mixin = modUtils.enableMixins(mixin, "mixins.${modId}.refmap.json")
+        }
 
         api (mixin) {
             transitive = false
