--- a/gradle.properties
+++ b/gradle.properties
@@ -52,6 +52,8 @@ accessTransformersFile =
 usesMixins = false
 # Specify the package that contains all of your Mixins. You may only place Mixins in this package or the build will fail!
 mixinsPackage =
+# Automatically generates a mixin config json if enabled, with the name mixins.modid.json
+generateMixinConfig = true
 # Specify the core mod entry class if you use a core mod. This class must implement IFMLLoadingPlugin!
 # Example value: coreModClass = asm.FMLPlugin + modGroup = com.myname.mymodid -> com.myname.mymodid.asm.FMLPlugin
 coreModClass =
