--- a/build.gradle
+++ b/build.gradle
@@ -432,6 +432,7 @@ dependencies {
     }
 
     if (enableJUnit.toBoolean()) {
+        testImplementation 'org.hamcrest:hamcrest:2.2'
         testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
         testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     }
