--- a/build.gradle
+++ b/build.gradle
@@ -1011,7 +1011,7 @@ def getSecondaryArtifacts() {
 }
 
 def getReleaseType() {
-    String type = project.releaseType
+    String type = providers.environmentVariable('RELEASE_TYPE').getOrElse(project.releaseType)
     if (!(type in ['release', 'beta', 'alpha'])) {
         throw new Exception("Release type invalid! Found \"" + type + "\", allowed: \"release\", \"beta\", \"alpha\"")
     }
