better maven names

--- a/gradle.properties
+++ b/gradle.properties
@@ -144,6 +144,10 @@ noPublishedSources = false
 # Password is set with the 'MAVEN_PASSWORD' environment variable, default to "NONE"
 customMavenPublishUrl =
 
+# The group for maven artifacts. Defaults to the 'project.modGroup' until the last '.' (if any).
+# So 'mymod' becomes 'mymoc' and 'com.myname.mymodid' 'becomes com.myname'
+mavenArtifactGroup =
+
 # Enable spotless checks
 # Enforces code formatting on your source code
 # By default this will use the files found here: https://github.com/GregTechCEu/Buildscripts/tree/master/spotless
