--- a/gradle.properties
+++ b/gradle.properties
@@ -145,7 +145,7 @@ noPublishedSources = false
 customMavenPublishUrl =
 
 # The group for maven artifacts. Defaults to the 'project.modGroup' until the last '.' (if any).
-# So 'mymod' becomes 'mymoc' and 'com.myname.mymodid' 'becomes com.myname'
+# So 'mymod' becomes 'mymod' and 'com.myname.mymodid' 'becomes com.myname'
 mavenArtifactGroup =
 
 # Enable spotless checks
