--- a/gradle.properties
+++ b/gradle.properties
@@ -91,6 +91,8 @@ relocateShadowedDependencies = true
 # Useful for debugging a server and client simultaneously. If not enabled, it will be in the standard location "run/"
 separateRunDirectories = false
 
+# The display name format of versions published to Curse and Modrinth. $MOD_NAME and $VERSION are available variables.
+versionDisplayFormat = $MOD_NAME \u2212 $VERSION
 
 # Publishing to modrinth requires you to set the MODRINTH_API_KEY environment variable to your current modrinth API token.
 
