--- a/gradle.properties
+++ b/gradle.properties
@@ -37,6 +37,8 @@ generateGradleTokenClass = com.myname.mymodid.Tags
 gradleTokenModId = MODID
 gradleTokenModName = MODNAME
 gradleTokenVersion = VERSION
+# This will parse relations from a relations.json file in the root folder. Does nothing if the file is not found.
+gradleTokenDependencies = DEPENDENCIES
 
 # In case your mod provides an API for other mods to implement you may declare its package here. Otherwise, you can
 # leave this property empty.
@@ -91,6 +93,9 @@ relocateShadowedDependencies = true
 # Useful for debugging a server and client simultaneously. If not enabled, it will be in the standard location "run/"
 separateRunDirectories = false
 
+# File location of the relations json file.
+forgeRelations = relations.json
+
 # The display name format of versions published to Curse and Modrinth. $MOD_NAME and $VERSION are available variables.
 # Default: $MOD_NAME \u2212 $VERSION. \u2212 is the minus character which looks much better than the hyphen minus on Curse.
 versionDisplayFormat = $MOD_NAME \u2212 $VERSION
@@ -102,13 +107,13 @@ versionDisplayFormat = $MOD_NAME \u2212 $VERSION
 # Alternatively this can be set with the 'MODRINTH_PROJECT_ID' environment variable.
 modrinthProjectId =
 
-# The project's relations on Modrinth. You can use this to refer to other projects on Modrinth.
+# The project's relations on Modrinth. You can use this to refer to other projects on Modrinth or specify a json file path.
 # Syntax: scope1-type1:name1;scope2-type2:name2;...
 # Where scope can be one of [required, optional, incompatible, embedded],
 #       type can be one of [project, version],
 #       and the name is the Modrinth project or version slug/id of the other mod.
 # Example: required-project:jei;optional-project:top;incompatible-project:gregtech
-modrinthRelations =
+modrinthRelations = relations.json
 
 
 # Publishing to CurseForge requires you to set the CURSEFORGE_API_KEY environment variable to one of your CurseForge API tokens.
@@ -118,12 +123,12 @@ modrinthRelations =
 # Alternatively this can be set with the 'CURSEFORGE_PROJECT_ID' environment variable.
 curseForgeProjectId =
 
-# The project's relations on CurseForge. You can use this to refer to other projects on CurseForge.
+# The project's relations on CurseForge. You can use this to refer to other projects on CurseForge or specify a json file path.
 # Syntax: type1:name1;type2:name2;...
 # Where type can be one of [requiredDependency, embeddedLibrary, optionalDependency, tool, incompatible],
 #       and the name is the CurseForge project slug of the other mod.
 # Example: requiredDependency:railcraft;embeddedLibrary:cofhlib;incompatible:buildcraft
-curseForgeRelations =
+curseForgeRelations = relations.json
 
 # This project's release type on CurseForge and/or Modrinth
 # Alternatively this can be set with the 'RELEASE_TYPE' environment variable.
