--- a/gradle.properties
+++ b/gradle.properties
@@ -43,6 +43,9 @@ gradleTokenVersion = VERSION
 # Example value: apiPackage = api + modGroup = com.myname.mymodid -> com.myname.mymodid.api
 apiPackage =
 
+# If you want to keep your API code in src/api instead of src/main
+useSrcApiPath = false
+
 # Specify the configuration file for Forge's access transformers here. It must be placed into /src/main/resources/
 # There can be multiple files in a comma-separated list.
 # Example value: mymodid_at.cfg,jei_at.cfg
