fix from previous commit

--- a/build.gradle
+++ b/build.gradle
@@ -108,9 +108,9 @@ if (!getFile(targetPackageJava).exists() && !getFile(targetPackageScala).exists(
 if (apiPackage) {
     final String endApiPath = modGroupPath + '/' + apiPackagePath
     if (useSrcApiPath) {
-        targetPackageJava = 'src/api/java' + endApiPath
-        targetPathScala = 'src/api/scala' + endApiPath
-        targetPathKotlin = 'src/api/kotlin' + endApiPath
+        targetPackageJava = 'src/api/java/' + endApiPath
+        targetPackageScala = 'src/api/scala/' + endApiPath
+        targetPackageKotlin = 'src/api/kotlin/' + endApiPath
     } else {
         targetPackageJava = javaSourceDir + endApiPath
         targetPackageScala = scalaSourceDir + endApiPath
