--- a/gradle.properties
+++ b/gradle.properties
@@ -27,6 +27,11 @@ minecraftVersion = 1.12.2
 # Alternatively this can be set with the 'DEV_USERNAME' environment variable.
 developmentEnvironmentUserName = Developer
 
+# Additional arguments applied to the JVM when launching minecraft
+# Syntax: -arg1=value1;arg2=value2;...
+# Example value: -Dmixin.debug.verify=true;-XX:+UnlockExperimentalVMOptions
+additionalJavaArguments = 
+
 # Enables using modern java syntax (up to version 17) via Jabel, while still targeting JVM 8.
 # See https://github.com/bsideup/jabel for details on how this works.
 # Using this requires that you use a Java 17 JDK for development.
