missing dash in comment

--- a/gradle.properties
+++ b/gradle.properties
@@ -28,7 +28,7 @@ minecraftVersion = 1.12.2
 developmentEnvironmentUserName = Developer
 
 # Additional arguments applied to the JVM when launching minecraft
-# Syntax: -arg1=value1;arg2=value2;...
+# Syntax: -arg1=value1;-arg2=value2;...
 # Example value: -Dmixin.debug.verify=true;-XX:+UnlockExperimentalVMOptions
 additionalJavaArguments = 
 
