--- a/gradle.properties
+++ b/gradle.properties
@@ -32,6 +32,12 @@ developmentEnvironmentUserName = Developer
 # Using this requires that you use a Java 17 JDK for development.
 enableModernJavaSyntax = true
 
+# Enables runClient/runServer tasks for Java 17 and Java 21 using LWJGL3ify.
+# This is primarily used to test if your mod is compatible with platforms running
+# Minecraft 1.12.2 on modern versions of Java and LWJGL, and assist in fixing any problems with it.
+# Using this requires that you use a Java 17/Java 21 JDK for development.
+enableJava17RunTasks = true
+
 # Generate a class with String fields for the mod id, name and version named with the fields below
 generateGradleTokenClass = com.myname.mymodid.Tags
 gradleTokenModId = MODID
