make java17/21 tasks default false

--- a/gradle.properties
+++ b/gradle.properties
@@ -36,7 +36,7 @@ enableModernJavaSyntax = true
 # This is primarily used to test if your mod is compatible with platforms running
 # Minecraft 1.12.2 on modern versions of Java and LWJGL, and assist in fixing any problems with it.
 # Using this requires that you use a Java 17/Java 21 JDK for development.
-enableJava17RunTasks = true
+enableJava17RunTasks = false
 
 # Generate a class with String fields for the mod id, name and version named with the fields below
 generateGradleTokenClass = com.myname.mymodid.Tags
