--- a/gradle.properties
+++ b/gradle.properties
@@ -55,6 +55,8 @@ accessTransformersFile =
 usesMixins = false
 # Specify the package that contains all of your Mixins. You may only place Mixins in this package or the build will fail!
 mixinsPackage =
+# Location of the mixin config refmap. If left, blank, defaults to "mixins.${modId}.refmap.json"
+mixinConfigRefmap =
 # Automatically generates a mixin config json if enabled, with the name mixins.modid.json
 generateMixinConfig = true
 # Specify the core mod entry class if you use a core mod. This class must implement IFMLLoadingPlugin!
