--- a/gradle.properties
+++ b/gradle.properties
@@ -55,7 +55,7 @@ accessTransformersFile =
 usesMixins = false
 # Specify the package that contains all of your Mixins. You may only place Mixins in this package or the build will fail!
 mixinsPackage =
-# Location of the mixin config refmap. If left, blank, defaults to "mixins.${modId}.refmap.json"
+# Location of the mixin config refmap. If left, blank, defaults to "mixins.${modId}.refmap.json". Target file must have the "json" extension.
 mixinConfigRefmap =
 # Automatically generates a mixin config json if enabled, with the name mixins.modid.json
 generateMixinConfig = true
