--- a/gradle.properties
+++ b/gradle.properties
@@ -88,8 +88,8 @@ includeCommonDevEnvMods = true
 
 # Some mods require a specific forge version to launch in. When you need to use one of those mods as a dependency,
 # and cannot launch with the forge version required, enable this to strip the forge version requirements from that mod.
-# This will add 'strip-latest-forge-requirements' as 'runtimeOnly'.
-# Requires useMixins or forceEnableMixins to be true.
+# This will add 'strip-latest-forge-requirements' as 'runtimeOnlyNonPublishable'.
+# Requires useMixins or forceEnableMixins to be true, as the mod uses mixins to function.
 stripForgeRequirements = false
 
 
