--- a/gradle.properties
+++ b/gradle.properties
@@ -91,6 +91,12 @@ includeWellKnownRepositories = true
 # Overrides the above setting to be always true, as these repositories are needed to fetch the mods
 includeCommonDevEnvMods = true
 
+# Some mods require a specific forge version to launch in. When you need to use one of those mods as a dependency,
+# and cannot launch with the forge version required, enable this to strip the forge version requirements from that mod.
+# This will add 'strip-latest-forge-requirements' as 'runtimeOnlyNonPublishable'.
+# Requires useMixins or forceEnableMixins to be true, as the mod uses mixins to function.
+stripForgeRequirements = false
+
 
 # If enabled, you may use 'shadowCompile' for dependencies. They will be integrated in your jar. It is your
 # responsibility check the licence and request permission for distribution, if required.
