--- a/build.gradle
+++ b/build.gradle
@@ -252,7 +252,11 @@ if (enableSpotless.toBoolean()) {
             target 'src/*/kotlin/**/*.kt'
 
             toggleOffOn()
-            ktfmt('0.39')
+            if (useNewerKotlinVersion.toBoolean()) {
+                ktfmt('0.53')
+            } else {
+                ktfmt('0.44')
+            }
 
             trimTrailingWhitespace()
             indentWithSpaces(4)
@@ -475,7 +479,7 @@ repositories {
             url 'https://maven.gtceu.com'
         }
     }
-    if (usesMixins.toBoolean() || forceEnableMixins.toBoolean()) {
+    if (usesMixins.toBoolean() || forceEnableMixins.toBoolean() || useNewerKotlinVersion.toBoolean()) {
         // need to add this here even if we did not above
         if (!includeWellKnownRepositories.toBoolean()) {
             maven {
