make mixinProviderSpec use properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -64,6 +64,8 @@ accessTransformersFile =
 
 # Provides setup for Mixins if enabled. If you don't know what mixins are: Keep it disabled!
 usesMixins = false
+# Mixin Provider to use. Primarily changed when needing to use a different version.
+mixinProviderSpec = zone.rong:mixinbooter:9.1
 # Specify the package that contains all of your Mixins. You may only place Mixins in this package or the build will fail!
 mixinsPackage =
 # Location of the mixin config refmap. If left, blank, defaults to "mixins.${modId}.refmap.json". Target file must have the "json" extension.
